Remove the fixed line height as on some browsers it doesn't match the normal line height and looks a bit wonky. Instead I added a class to the outer dl so that the titles can clear the line, the field names and values are not aligned on safari and opera, but the whole thing looks vaguely reasonable now.
Refs #1735.


[SVN r45287]

--- a/style/css_0/content.css
+++ b/style/css_0/content.css
@@ -342,6 +342,9 @@
   padding: 0em 0em 0em 1em;
 }
 /* Field+value style lists... */
+#content .section dl.library-list dt {
+  clear: left;
+}
 #content .section dl.fields {
   margin: 0.5em 0em 0.5em 0em;
 }
@@ -352,7 +355,6 @@
   margin: 0em;
   font-style: italic;
   overflow: hidden;
-  height: 1.3em;
 }
 #content .section dl.fields dt:after {
   content: ".....................................";
